--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0-beta1",
     "parcel-bundler": "^1.12.5"
   }
 }
